fix whitespace

--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ body {
 /* * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .section-cta {
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
